--- a/style.css
+++ b/style.css
@@ -771,11 +771,11 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #ff854c;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #ff854c!important;
 }
 
 .btn-atomic-tangerine {
@@ -797,7 +797,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #ff854c!important;
 }
 
 .ltc-atomic-tangerine:hover {
